runtime/samples/SalesforceFoundation/Cumulus/src/objects/Address__c.object
<CustomObject>
    <description>Custom object for storing additional addresses for Household Accounts in the Nonprofit Success Pack.</description>
    <fields>
        <fullName>API_Response__c</fullName>
        <description>Contains the raw response or an error message.</description>
        <inlineHelpText>Contains the raw response or an error message.</inlineHelpText>
        <label>API Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Administrative_Area__c</fullName>
        <description>Depending on the country and area, could be a city, township, municipality or other civic region associated with this address.</description>
        <inlineHelpText>Depending on the country and area, could be a city, township, municipality or other civic region associated with this address.</inlineHelpText>
        <label>Administrative Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ambiguous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether more than on valid address was found when attempting to validate it through an external service.</description>
        <inlineHelpText>Indicates whether more than on valid address was found when attempting to validate it through an external service.</inlineHelpText>
        <label>Ambiguous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Congressional_District__c</fullName>
        <description>The congressional district to which the address belongs pertains.</description>
        <inlineHelpText>The congressional district to which the address belongs pertains.</inlineHelpText>
        <label>Congressional District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <description>Name of the county the address is located at.</description>
        <inlineHelpText>Name of the county the address is located at.</inlineHelpText>
        <label>County Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this the Default Address to use for the Household and its Contacts?</inlineHelpText>
        <label>Default Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula_MailingAddress__c</fullName>
        <formula>MailingStreet__c &amp; BR() &amp;
MailingStreet2__c &amp; IF(LEN(MailingStreet2__c)&gt;0, BR(), &quot;&quot;) &amp; 
MailingCity__c &amp; IF(LEN(MailingCity__c) &gt; 0, &quot;, &quot;, &quot;&quot;) &amp; MailingState__c &amp; &quot; &quot; &amp; MailingPostalCode__c 
&amp; IF(LEN(MailingCountry__c)&gt;0, BR() &amp; MailingCountry__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_MailingStreetAddress__c</fullName>
        <formula>MailingStreet__c + IF(ISBLANK(MailingStreet2__c), &apos;&apos;, &apos;, &apos; + TRIM(MailingStreet2__c))</formula>
        <label>Mailing Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <description>Location expressed as latitude and longitude.</description>
        <inlineHelpText>Location expressed as latitude and longitude.</inlineHelpText>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Household_Account__c</fullName>
        <inlineHelpText>The Account this Address is for.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Latest_End_Date__c</fullName>
        <inlineHelpText>The most recent ending date that this address was used. Generally used with Latest Start Date to track a date range for an address that&apos;s no longer in use.</inlineHelpText>
        <label>Latest End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Start_Date__c</fullName>
        <inlineHelpText>The most recent starting date that this address was used. Generally used with Latest End Date to track a date range for an address that&apos;s no longer in use.</inlineHelpText>
        <label>Latest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet2__c</fullName>
        <label>Mailing Street2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Verification_Address__c</fullName>
        <description>Stores the address as entered before verification with a remote service, in case any information is lost in the verification process.</description>
        <inlineHelpText>Stores the address as entered before verification with a remote service, in case any information is lost in the verification process.</inlineHelpText>
        <label>Pre-Verification Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Seasonal_End_Day__c</fullName>
        <inlineHelpText>The day of the month when this address no longer replaces the default address.</inlineHelpText>
        <label>Seasonal End Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seasonal_End_Month__c</fullName>
        <inlineHelpText>The month of the year when this address no longer replaces the default address.</inlineHelpText>
        <label>Seasonal End Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seasonal_Start_Day__c</fullName>
        <inlineHelpText>The day of the month when this address replaces the default address.</inlineHelpText>
        <label>Seasonal Start Day</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seasonal_Start_Month__c</fullName>
        <inlineHelpText>The month of the year when this address replaces the default address.</inlineHelpText>
        <label>Seasonal Start Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Lower_District__c</fullName>
        <description>The state lower district (such as a state assembly district) this address belongs to.</description>
        <inlineHelpText>The state lower district (such as a state assembly district) this address belongs to.</inlineHelpText>
        <label>State Lower District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Upper_District__c</fullName>
        <description>The state upper district (such as state senate district) this address belongs to.</description>
        <inlineHelpText>The state upper district (such as state senate district) this address belongs to.</inlineHelpText>
        <label>State Upper District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <description>Status of the address verification.</description>
        <inlineHelpText>If this address requires verification, click the Verify Address button at the top of this page. Consult the Help documentation in the Power of Us Hub for more information.</inlineHelpText>
        <label>Verification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the address has been verified by an external address verification service.</description>
        <inlineHelpText>Indicates whether the address has been verified by an external address verification service.</inlineHelpText>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>